--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="bg">
 <head>
@@ -35,12 +36,25 @@
       font-weight: bold;
     }
     .hero {
+      position: relative;
       background-image: url('assets/images/bg-greek-bulgarian.jpg');
       background-size: cover;
       background-position: center;
       color: white;
       padding: 4rem 2rem;
       text-align: center;
+    }
+    .hero::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 0;
+    }
+    .hero h1, .hero p {
+      position: relative;
+      z-index: 1;
     }
     .hero h1 {
       font-size: 2.8rem;
