--- a/index.html
+++ b/index.html
@@ -125,8 +125,10 @@
   </nav>
 
   <div class="hero">
-    <h1>Добре дошли в света на езика, който обединява култури</h1>
-    <p>🇧🇬 България и Гърция 🇬🇷 – две нации, един езиков мост, една страст</p>
+    <h1><strong>Добре дошли в света на езика, който обединява култури</strong></h1>
+    <h1><strong>Καλώς ήρθατε στον κόσμο της γλώσσας που ενώνει πολιτισμούς</strong></h1>
+    <p><em>България и Гърция – две нации, един езиков мост, една страст!</p></em></p>
+    <p><em>Βουλγαρία και Ελλάδα – δύο έθνη, μία γλωσσική γέφυρα, ένα πάθος!</p></em></p>
   </div>
 
   <section id="about">
@@ -135,22 +137,35 @@
       Казвам се Пламен Асенов Моллов и съм заклет преводач от и на гръцки език с над 17 години опит. Завършил съм специалност "Български език и новогръцки език" в ПУ „Паисий Хилендарски“ – гр. Пловдив. Участвах в престижни програми като <strong>Сократ – Еразъм</strong> в Солунския университет „Аристотел“, където усъвършенствах знанията си по гръцки език и култура. Моята мисия е да създавам мостове между хората чрез езика, с уважение, точност и вдъхновение.
     </p>
     <p style="text-align: justify;">
-      Το όνομά μου είναι Πλάμεν Ασένοφ Μόλλοβ και είμαι επίσημος μεταφραστής από και προς την ελληνική γλώσσα με εμπειρία άνω των 17 ετών. Σπούδασα Βουλγαρική και Νεοελληνική φιλολογία στο Πανεπιστήμιο της Φιλιππούπολης και συμμετείχα στο πρόγραμμα <strong>Socrates – Erasmus</strong> στο Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης. Η αποστολή μου είναι να φέρνω κοντά τους πολιτισμούς μέσω της γλώσσας.
+      Το όνομά μου είναι Πλάμεν Ασένοφ Μόλλοβ και είμαι επίσημος μεταφραστής-διερμηνέας από και προς την ελληνική γλώσσα με εμπειρία άνω των 17 ετών. Σπούδασα Βουλγαρική και Νεοελληνική φιλολογία στο Πανεπιστήμιο της Φιλιππούπολης και συμμετείχα στο πρόγραμμα <strong>Socrates – Erasmus</strong> στο Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης, ενισχύοντας τις γλωσσικές και πολιτισμικές μου γνώσεις.Η αποστολή μου είναι να φέρνω κοντά τους ανθρώπους μέσα από τη γλώσσα, με ακρίβεια, σεβασμό και έμπνευση. 
     </p>
   </section>
 
   <section id="services">
     <h2 class="section-title">Услуги / Υπηρεσίες</h2>
-    <ul>
-      <li>✍️ Писмени преводи на документи, литературни и специализирани текстове</li>
-      <li>🎙️ Устни преводи при събития, срещи, обучения</li>
-      <li>📜 Легализирани преводи за държавни и частни институции</li>
     </ul>
+      <p><em><li>✍️ Писмени преводи на документи, литературни и специализирани текстове.</li> 
+      <li>🎙️ Устни преводи при събития, срещи, обучения.</li>
+      <li>📜 Легализирани преводи за държавни и частни институции.</li>
+    </p>
+    </ul>
+      <li>✍️ Μετάφραση εγγράφων, λογοτεχνικών και εξειδικευμένων κειμένων.</li>
+      <li>🎙️ Παροχή προφορικής διερμηνείας σε επαγγελματικές εκδηλώσεις, επιχειρηματικές συναντήσεις και εκπαιδευτικά σεμινάρια.</li>
+      <li>📜 Επίσημες και επικυρωμένες μεταφράσεις εγγράφων για χρήση σε δημόσιες υπηρεσίες και ιδιωτικούς οργανισμούς.</li>
+    </ul>
+
     <p><em>Μεταφράσεις που εμπνέουν εμπιστοσύνη, ακρίβεια και σεβασμό στον λόγο.</em></p>
   </section>
 
+  <section id="prices">
+    <h2 class="section-title">Цени / Τιμές</h2>
+    <p style="text-align: justify;">
+    <p><em>Цените се договарят индивидуално според сложността, обема и сроковете.</em></p>
+    <p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
+  </section>
+
   <section id="testimonials">
-    <h2 class="section-title">Мнения на клиенти</h2>
+    <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
     <div class="testimonial">
       “Изключително професионален подход и невероятно качество на преводите. Препоръчвам с две ръце!”
       <strong>Мария Димитрова</strong>
