--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
   <header>
     <img src="assets/images/logo.png" alt="Plamen Mollov Logo" />
     <h1>Пламен Асенов Моллов</h1>
-    <p>Заклет преводач от и на гръцки език с над 17 години опит и истинска любов към езика</p>
+    <h2><strong>Заклет преводач от и на гръцки език с над 17 години опит и истинска любов към езика</strong></h2>
   </header>
 
   <nav>
@@ -174,6 +174,10 @@
       “Благодарение на Пламен, успях да сключа важен договор в Гърция. Истински мост между културите.”
       <strong>Дияна Иванова</strong>
     </div>
+    <div class="testimonial">
+      “Είμαι πολύ ικανοποιημένος από τις υπηρεσίες του κ. Πλάμεν Μόλλοβ.”
+      <strong>Παρασκευαΐδης Χρήστος</strong>
+    </div>
   </section>
 
   <section id="contact">
@@ -190,7 +194,7 @@
 
   <footer>
     <p>&copy; 2025 Пламен Моллов – Преводи с любов към гръцкия език</p>
-    <p>🇧🇬 България | Γραικία 🇬🇷</p>
+    <p>🇧🇬 България | Ελλάδα 🇬🇷</p>
   </footer>
 </body>
 </html>
