--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </p>
   </section>
 
-  <section id="services">
+  <section id="services" style="background-color: #e6f2ff;">
     <h2 class="section-title">Услуги / Υπηρεσίες</h2>
     </ul>
       <p><em><li>✍️ Писмени преводи на документи, литературни и специализирани текстове.</li> 
@@ -178,7 +178,14 @@
       “Είμαι πολύ ικανοποιημένος από τις υπηρεσίες του κ. Πλάμεν Μόλλοβ.”
       <strong>Παρασκευαΐδης Χρήστος</strong>
     </div>
-  </section>
+  <!-- Форма за нови мнения -->
+  <form action="mailto:mollovplamen@gmail.com" method="POST" enctype="text/plain">
+    <h3>Оставете мнение / Αφήστε αξιολόγηση</h3>
+    <label>Име / Όνομα:<br /><input type="text" name="name" required /></label><br />
+    <label>Вашето мнение / Η αξιολόγησή σας:<br /><textarea name="testimonial" rows="5" required></textarea></label><br />
+    <button type="submit">Изпрати / Αποστολή</button>
+  </form>
+</section>
 
   <section id="contact">
     <h2 class="section-title">Контакт / Επικοινωνία</h2>
