--- a/index.html
+++ b/index.html
@@ -162,7 +162,20 @@
     <p style="text-align: justify;">
     <p><em>Цените се договарят индивидуално според сложността, обема и сроковете.</em></p>
     <p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
-  </section>
+  
+<div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
+  <h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
+  <form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST" enctype="multipart/form-data">
+    <input type="text" name="Име и фамилия" placeholder="Име и фамилия" required>
+    <input type="email" name="Имейл" placeholder="Имейл адрес" required>
+    <input type="tel" name="Телефон" placeholder="Телефон" required>
+    <textarea name="Описание" placeholder="Кратко описание..." rows="4" required></textarea>
+    <input type="file" name="attachment" required>
+    <button type="submit">Изпрати</button>
+    <input type="hidden" name="_captcha" value="false">
+  </form>
+</div>
+</section>
 
   <section id="testimonials">
     <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
@@ -182,8 +195,10 @@
 </section>
 
   <section id="contact">
-    <h2 class="section-title">Контакт / Επικοινωνία</h2>
+    <h2 class="section-title">Контакти / Επικοινωνίες</h2>
     <p>📧 Email: <a href="mailto:mollovplamen@gmail.com">mollovplamen@gmail.com</a></p>
+<p>📍 Град: Пловдив</p>
+<p>📞 Телефон: 00359 897 09 89 59</p>
     
   </section>
 
