--- a/index.html
+++ b/index.html
@@ -192,6 +192,19 @@
       <strong>Παρασκευαΐδης Χρήστος</strong>
     </div>
   
+
+<div style="margin-top: 2rem;">
+  
+<h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
+<form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST">
+  <input type="text" name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required>
+  <textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" rows="4" required></textarea>
+  <button type="submit">Изпрати / Αποστολή</button>
+  <input type="hidden" name="_subject" value="Ново клиентско мнение / Νέα αξιολόγηση πελάτη">
+  <input type="hidden" name="_captcha" value="false">
+</form>
+
+</div>
 </section>
 
   <section id="contact">
