--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
   <nav>
     <a href="#about">За мен</a>
     <a href="#services">Услуги</a>
+    <a href="#real-estate">Недвижими имоти в Гърция</a>
     <a href="#testimonials">Мнения</a>
     <a href="#contact">Контакт</a>
   </nav>
@@ -156,6 +157,36 @@
 
     <p><em>Μεταφράσεις που εμπνέουν εμπιστοσύνη, ακρίβεια και σεβασμό στον λόγο.</em></p>
   </section>
+
+<section id="real-estate" style="background-color: #f8fcff; padding: 2rem; border-top: 2px solid #ccc; border-radius: 12px;">
+  <h2 class="section-title">Недвижими имоти в Гърция / Ακίνητα στην Ελλάδα</h2>
+
+  <p><strong>Консултантски услуги и устен превод при имотни сделки в Гърция / Συμβουλευτικές υπηρεσίες και διερμηνεία στην Ελλάδα</strong></p>
+
+  <p>При покупка или продажба на недвижими имоти в Гърция е важно да имате доверен партньор, който да ви съдейства с езика, процедурите и културните особености. Предлагам пълно съдействие и устен превод на място, така че да се чувствате спокойни и уверени на всяка стъпка от процеса.</p>
+
+  <ul>
+    <li>🏘️ Устен превод при покупко-продажба на недвижими имоти</li>
+    <li>📝 Консултации и превод при сключване на договори и нотариални актове</li>
+    <li>💼 Издаване на данъчен номер (ΑΦΜ) в Гърция</li>
+    <li>🤝 Придружаване до нотариус, адвокат, счетоводител, агенции за недвижими имоти</li>
+    <li>📄 Превод и обяснение на документи, изисквани от гръцки институции</li>
+  </ul>
+
+  <p>Κατά την αγορά ή πώληση ακινήτου στην Ελλάδα, είναι σημαντικό να έχετε στο πλευρό σας έναν αξιόπιστο συνεργάτη που γνωρίζει τόσο τη γλώσσα όσο και τη διαδικασία. Προσφέρω πλήρη υποστήριξη και προφορική διερμηνεία ώστε να αισθάνεστε ασφάλεια και κατανόηση σε κάθε βήμα.</p>
+
+  <ul>
+    <li>🏘️ Διερμηνεία σε διαδικασίες αγοραπωλησίας ακινήτων</li>
+    <li>📝 Συμβουλές και μετάφραση συμβολαίων και νομικών εγγράφων</li>
+    <li>💼 Έκδοση ΑΦΜ (φορολογικού αριθμού) στην εφορία</li>
+    <li>🤝 Συνοδεία σε συμβολαιογράφους, δικηγόρους, λογιστές ή κτηματομεσίτες</li>
+    <li>📄 Ερμηνεία και επεξήγηση απαιτούμενων εγγράφων</li>
+  </ul>
+
+  <p><strong>📩 Свържете се с мен, за да уговорим индивидуална среща или консултация.<br>
+  📩 Επικοινωνήστε μαζί μου για προσωπικό ραντεβού ή συμβουλή.</strong></p>
+</section>
+
 
   <section id="prices">
     <h2 class="section-title">Цени / Τιμές</h2>
@@ -207,7 +238,8 @@
 </div>
 </section>
 
-  <section id="contact">
+  
+<section id="contact">
     <h2 class="section-title">Контакти / Επικοινωνίες</h2>
     <p>📧 Email: <a href="mailto:mollovplamen@gmail.com">mollovplamen@gmail.com</a></p>
 <p>📍 Град: Пловдив</p>
