--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
       background-color: #0055a5;
       padding: 0.5rem;
     }
+    
     nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
+      padding: 0.5rem 1.2rem;
+      margin: 0 0.3rem;
     }
+
     .hero {
       position: relative;
       background-image: url('assets/images/bg-greece.jpg');
