--- a/index.html
+++ b/index.html
@@ -30,13 +30,19 @@
       padding: 0.5rem;
     }
     
+    
     nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
-      padding: 0.5rem 1.2rem;
-      margin: 0 0.3rem;
+      padding: 0.8rem 1.6rem;
+      margin: 0 0.6rem;
+      transition: background-color 0.3s ease;
     }
+    html {
+      scroll-behavior: smooth;
+    }
+
 
     .hero {
       position: relative;
