--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
     <span></span>
   </div>
   <div class="nav-links">
-    <a href="#about">За мен</a>
-    <a href="#services">Услуги</a>
-    <a href="#prices">Цени</a>
-    <a href="#real-estate">Недвижими имоти в Гърция</a>
-    <a href="#testimonials">Мнения</a>
-    <a href="#contact">Контакт</a>
+    <a href="#about">За мен / Σχετικά με εμένα</a>
+    <a href="#services">Услуги / Υπηρεσίες</a>
+    <a href="#prices">Цени / Τιμές</a>
+    <a href="#real-estate">Недвижими имоти в Гърция / Ακίνητα στην Ελλάδα</a>
+    <a href="#testimonials">Мнения / Αξιλογήσεις</a>
+    <a href="#contact">Контакти / Επικοινωνίες</a>
     </div>
 </nav>
 
@@ -203,7 +203,7 @@
       Казвам се Пламен Асенов Моллов и съм заклет преводач от и на гръцки език с над 17 години опит. Завършил съм специалност "Български език и новогръцки език" в ПУ „Паисий Хилендарски“ – гр. Пловдив. Участвах в престижни програми като <strong>Сократ – Еразъм</strong> в Солунския университет „Аристотел“, където усъвършенствах знанията си по гръцки език и култура. Моята мисия е да създавам мостове между хората чрез езика, с уважение, точност и вдъхновение.
     </p>
     <p style="text-align: justify;">
-      Το όνομά μου είναι Πλάμεν Ασένοφ Μόλλοβ και είμαι επίσημος μεταφραστής-διερμηνέας από και προς την ελληνική γλώσσα με εμπειρία άνω των 17 ετών. Σπούδασα Βουλγαρική και Νεοελληνική φιλολογία στο Πανεπιστήμιο της Φιλιππούπολης και συμμετείχα στο πρόγραμμα <strong>Socrates – Erasmus</strong> στο Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης, ενισχύοντας τις γλωσσικές και πολιτισμικές μου γνώσεις.Η αποστολή μου είναι να φέρνω κοντά τους ανθρώπους μέσα από τη γλώσσα, με ακρίβεια, σεβασμό και έμπνευση. 
+      Το όνομά μου είναι Πλάμεν Ασένοβ Μόλλοβ και είμαι επίσημος μεταφραστής-διερμηνέας από και προς την ελληνική γλώσσα με εμπειρία άνω των 17 ετών. Σπούδασα Βουλγαρική και Νεοελληνική φιλολογία στο Πανεπιστήμιο της Φιλιππούπολης "Παίσιι Χιλεντάρσκι" και συμμετείχα στο πρόγραμμα <strong>Socrates – Erasmus</strong> στο Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης, ενισχύοντας τις γλωσσικές και πολιτισμικές μου γνώσεις.Η αποστολή μου είναι να φέρνω κοντά τους ανθρώπους μέσα από τη γλώσσα, με ακρίβεια, σεβασμό και έμπνευση. 
     </p>
   </section>
 
@@ -226,7 +226,7 @@
 <section id="real-estate" style="background-color: #f8fcff; padding: 2rem; border-top: 2px solid #ccc; border-radius: 12px;">
   <h2 class="section-title">Недвижими имоти в Гърция / Ακίνητα στην Ελλάδα</h2>
 
-  <p><strong>Консултантски услуги и устен превод при имотни сделки в Гърция / Συμβουλευτικές υπηρεσίες και διερμηνεία στην Ελλάδα</strong></p>
+  <p><strong>Консултантски услуги и устен превод при имотни сделки в Гърция / Συμβουλευτικές υπηρεσίες και υπηρεσίες διερμηνείας για συναλλαγές ακινήτων στην Ελλάδα</strong></p>
 
   <p>При покупка или продажба на недвижими имоти в Гърция е важно да имате доверен партньор, който да ви съдейства с езика, процедурите и културните особености. Предлагам пълно съдействие и устен превод на място, така че да се чувствате спокойни и уверени на всяка стъпка от процеса.</p>
 
@@ -262,12 +262,12 @@
 <div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
   <h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
   <form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST" enctype="multipart/form-data">
-    <input type="text" name="Име и фамилия" placeholder="Име и фамилия" required>
-    <input type="email" name="Имейл" placeholder="Имейл адрес" required>
-    <input type="tel" name="Телефон" placeholder="Телефон" required>
-    <textarea name="Описание" placeholder="Кратко описание..." rows="4" required></textarea>
+    <input type="text" name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required>
+    <input type="email" name="Имейл" placeholder="Имейл адрес / Email" required>
+    <input type="tel" name="Телефон" placeholder="Телефон / Τηλέφωνο" required>
+    <textarea name="Описание" placeholder="Кратко описание... / Περιγραφή" rows="4" required></textarea>
     <input type="file" name="attachment" required>
-    <button type="submit">Изпрати</button>
+    <button type="submit">Изпрати / Αποστολή</button>
     <input type="hidden" name="_captcha" value="false">
   </form>
 </div>
@@ -307,13 +307,13 @@
 <section id="contact">
     <h2 class="section-title">Контакти / Επικοινωνίες</h2>
     <p>📧 Email: <a href="mailto:mollovplamen@gmail.com">mollovplamen@gmail.com</a></p>
-<p>📍 Град: Пловдив</p>
-<p>📞 Телефон: 00359 897 09 89 59</p>
+<p>📍 Град: Пловдив / πόλη Πλόβντιβ Βουλγαρίας</p>
+<p>📞 Телефон / Τηλέφωνο: 00359 897 09 89 59</p>
     
   </section>
 
   <footer>
-    <p>&copy; 2025 Пламен Моллов – Преводи с любов към гръцкия език</p>
+    <p>&copy; 2025 Пламен Моллов – Заклет преводач с гръцки език</p>
     <p>🇧🇬 България | Ελλάδα 🇬🇷</p>
   </footer>
 </body>
