--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
 </nav>
 
   <div class="hero">
-    <h1><strong>Добре дошли в света на езика, който обединява култури</strong></h1>
-    <h1><strong>Καλώς ήρθατε στον κόσμο της γλώσσας που ενώνει πολιτισμούς</strong></h1>
-    <p><em>България и Гърция – две нации, един езиков мост, една страст!</p></em></p>
-    <p><em>Βουλγαρία και Ελλάδα – δύο έθνη, μία γλωσσική γέφυρα, ένα πάθος!</p></em></p>
+  <div style="position: absolute; bottom: 1rem; right: 2rem; text-align: right; font-size: 1.4rem; z-index: 1;">
+    <p><em>България и Гърция – две нации, един езиков мост, една страст!</em></p>
+    <p><em>Βουλγαρία και Ελλάδα – δύο έθνη, μία γλωσσική γέφυρα, ένα πάθος</em></p>
   </div>
+</div>
 
   <section id="about">
     <h2 class="section-title">За мен / Σχετικά με εμένα</h2>
