--- a/index.html
+++ b/index.html
@@ -191,16 +191,10 @@
 </nav>
 
   <div class="hero">
-    <h1><strong>България и Гърция – две нации, един езиков мост, една страст!</strong></h1>
-    <h1><strong>Βουλγαρία και Ελλάδα – δύο έθνη, μία γλωσσική γέφυρα, ένα πάθος!</strong></h1>
-   
-
-
-
-
-
-
-
+    <h1><strong>Добре дошли в света на езика, който обединява култури</strong></h1>
+    <h1><strong>Καλώς ήρθατε στον κόσμο της γλώσσας που ενώνει πολιτισμούς</strong></h1>
+    <p><em>България и Гърция – две нации, един езиков мост, една страст!</p></em></p>
+    <p><em>Βουλγαρία και Ελλάδα – δύο έθνη, μία γλωσσική γέφυρα, ένα πάθος!</p></em></p>
   </div>
 
   <section id="about">
