--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     .hero {
       position: relative;
       background-image: url('assets/images/bg-greece.jpg');
-      background-size: contain;
-      background-repeat: no-repeat;
+      background-size: cover;
       background-position: center;
       color: white;
       padding: 5rem 2rem;
@@ -59,7 +58,7 @@
       position: absolute;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.2);
+      background: rgba(0, 0, 0, 0.5);
       z-index: 0;
     }
     .hero h1, .hero p {
